--- a/src/Exercises/customhooks.css
+++ b/src/Exercises/customhooks.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
+
 .container {
     display       : flex;
     flex-direction: column;
@@ -5,11 +7,19 @@
 }
 
 .container .img-1 {
-    height: 200px;
-    width : 200px;
+    height: 400px;
+    width : 400px;
 }
 
 .container .img-2 {
     height: 100px;
     width : 100px;
+}
+
+.container div {
+    padding-top: 30px;
+}
+
+body {
+    font-family: 'Orbitron', sans-serif;
 }
